force-app/main/default/objects/AI_Config__mdt/AI_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for AI integration</description>
    <label>AI Config</label>
    <pluralLabel>AI Configs</pluralLabel>
</CustomObject>