force-app/main/default/objects/AI_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable this config</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>