force-app/main/default/objects/AI_Config__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>Claude API URL</description>
    <label>API Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>