force-app/main/default/objects/AI_Config__mdt/fields/Default_Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Default_Max_Tokens__c</fullName>
    <description>Default token limit</description>
    <label>Default Max Tokens</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>