force-app/main/default/objects/AI_Config__mdt/fields/Default_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Default_Temperature__c</fullName>
    <description>Default creativity</description>
    <label>Default Temperature</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>