force-app/main/default/objects/AI_Config__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Production, Sandbox, etc.</description>
    <label>Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>