force-app/main/default/objects/AI_Config__mdt/fields/Input_Cost_Per_1K__c.field-meta.xml
<CustomField>
    <fullName>Input_Cost_Per_1K__c</fullName>
    <description>$ per 1000 input tokens</description>
    <label>Input Cost Per 1K</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>