force-app/main/default/objects/AI_Config__mdt/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <description>Default model to use</description>
    <label>Model ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>