force-app/main/default/objects/AI_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Salesforce Named Credential</description>
    <label>Named Credential</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>