force-app/main/default/objects/AI_Config__mdt/fields/Output_Cost_Per_1K__c.field-meta.xml
<CustomField>
    <fullName>Output_Cost_Per_1K__c</fullName>
    <description>$ per 1000 output tokens</description>
    <label>Output Cost Per 1K</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>