force-app/main/default/objects/AI_Config__mdt/fields/Rate_Limit_Per_Minute__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Per_Minute__c</fullName>
    <description>Max calls per minute</description>
    <label>Rate Limit Per Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>