force-app/main/default/objects/AI_Config__mdt/fields/Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempts__c</fullName>
    <description>Number of retries</description>
    <label>Retry Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>