force-app/main/default/objects/AI_Config__mdt/fields/Retry_Delay_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay_Seconds__c</fullName>
    <description>Delay between retries</description>
    <label>Retry Delay Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>